sranja za popravit
sranja za popravit

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <span>Najbolji development na balkanu! <3</span>
                     <hr>
                     <div class="btns">
-                        <a href="https://discord.gg/tW8sSKpu82"><button target="_blank" class="invite">Discord Invite</button></a>
+                        <a href="https://discord.gg/tW8sSKpu82" target="_blank"><button target="_blank" class="invite">Discord Invite</button></a>
                     </div>
                 </div>
             </div>
@@ -192,6 +192,15 @@
                 <div class="opis">
                 <p>Reverse.</p>
                 <span>Developer</span>
+                </div>
+            </div></a>
+            <a target="_blank" rel="noopener noreferrer" style="text-decoration:none;"><div class="item">
+                <div class="avatar">
+                <img src="https://media.discordapp.net/attachments/1005116083017097296/1005537060184137828/11227B15-C35E-422F-AC42-F871E4BAE807.png?width=90&height=90">
+                </div>
+                <div class="opis">
+                <p>Tonii.</p>
+                <span>Discord Developer</span>
                 </div>
             </div></a>
             </div>
